RemoteFileFetcher: remove data URI preview to prevent screen overflow

BUG: 464833
Part-of: <https://invent.kde.org/graphics/krita/-/merge_requests/1724>